[gd_scene load_steps=4 format=2]

[ext_resource path="res://Ejecutable/Juego/Escenarios/Potenciadores/P.6_Laser/P.6_pistola_laser.gd" type="Script" id=1]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Potenciadores/P.6_Laser/Modelo/pistolon.dae" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 0.101752, 0.105197, 0.465763 )

[node name="P6_pistola_laser" type="Spatial"]

script = ExtResource( 1 )

[node name="Tiempo_disparo" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Scene Root" parent="." index="1" instance=ExtResource( 2 )]

transform = Transform( -0.0108713, 0, 0.999941, 0, 1, 0, -0.999941, 0, -0.0108713, -0.0541075, 0, 0 )

[node name="Area" type="Area" parent="." index="2"]

transform = Transform( -0.0108713, 0, 0.999941, 0, 1, 0, -0.999941, 0, -0.0108713, -0.0541075, 0, 0 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0454865, -0.465698 )
shape = SubResource( 1 )
disabled = false

[node name="Audio_carga_arma" type="AudioStreamPlayer3D" parent="." index="3"]

stream = null
attenuation_model = 0
unit_db = 0.0
unit_size = 1.0
max_db = 3.0
pitch_scale = 1.0
autoplay = false
max_distance = 0.0
out_of_range_mode = 0
bus = "Master"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -24.0
doppler_tracking = 0

[node name="Audio_disparo" type="AudioStreamPlayer3D" parent="." index="4"]

stream = null
attenuation_model = 0
unit_db = 0.0
unit_size = 1.0
max_db = 3.0
pitch_scale = 1.0
autoplay = false
max_distance = 0.0
out_of_range_mode = 0
bus = "Master"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -24.0
doppler_tracking = 0

[connection signal="timeout" from="Tiempo_disparo" to="." method="_on_Tiempo_disparo_timeout"]

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]


